changes: platform api

--- a/.github/workflows/discovery.yaml
+++ b/.github/workflows/discovery.yaml
@@ -4,9 +4,9 @@ on: [pull_request, workflow_dispatch, push]
 
 env:
   API_HOST: apps.676a85b33c8fc165d0f1c1c7.ocp.techzone.ibm.com
-  PLATFORM_API_PREFIX: platform-api
+  PLATFORM_API_PREFIX: apim-demo-mgmt-admin-tools
   PROVIDER_ORG: bi-demo
-  API_FILES: openapi.yaml, openapi2.yaml, openapi3.yaml
+  API_FILES: ./*.yaml 
 
 jobs:
   run-discovery:
