--- a/.github/workflows/discovery.yaml
+++ b/.github/workflows/discovery.yaml
@@ -21,6 +21,7 @@ jobs:
       id: discover-apis
       with:
         api_host: ${{ env.API_HOST }}
+        insecure_skip_tls_verify: true
         platform_api_prefix: ${{ env.PLATFORM_API_PREFIX }}
         provider_org: ${{ env.PROVIDER_ORG }}
         api_key: ${{ secrets.apicApikey }}
