--- a/.github/workflows/discovery.yaml
+++ b/.github/workflows/discovery.yaml
@@ -6,7 +6,7 @@ env:
   API_HOST: apps.676a85b33c8fc165d0f1c1c7.ocp.techzone.ibm.com
   PLATFORM_API_PREFIX: apim-demo-mgmt-admin-tools
   PROVIDER_ORG: bi-demo
-  API_FILES: ./*.yaml 
+  API_FILES: ./openapi.yaml 
 
 jobs:
   run-discovery:
