--- a/.github/workflows/discovery.yaml
+++ b/.github/workflows/discovery.yaml
@@ -4,7 +4,7 @@ on: [pull_request, workflow_dispatch, push]
 
 env:
   API_HOST: apps.676a85b33c8fc165d0f1c1c7.ocp.techzone.ibm.com
-  PLATFORM_API_PREFIX: dest
+  PLATFORM_API_PREFIX: apim-demo-mgmt-admin-tools
   PROVIDER_ORG: bi-demo
   INSECURE_SKIP_TLS_VERIFY: True
   API_FILES: openapi.yaml 
