--- a/.github/workflows/discovery.yaml
+++ b/.github/workflows/discovery.yaml
@@ -3,10 +3,10 @@ name: Sync Discovered API with APIConnect
 on: [pull_request, workflow_dispatch, push]
 
 env:
-  API_HOST: ap-southeast-a.apiconnect.automation.ibm.com
-  PROVIDER_ORG: techsales
+  API_HOST: apps.676a85b33c8fc165d0f1c1c7.ocp.techzone.ibm.com
+  PROVIDER_ORG: bi-demo
   INSECURE_SKIP_TLS_VERIFY: True
-  API_FILES: ./*.yaml
+  API_FILES: openapi.yaml 
 
 jobs:
   run-discovery:
